spacing fixed

--- a/css/me.css
+++ b/css/me.css
@@ -55,7 +55,7 @@
   .cover-claim {
     padding-right: 16px;
     padding-left:  16px;
-    margin-bottom: 15px;
+    margin-bottom: 28px;
     }
   .cover-btn {
     width: 150px;
